--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 	</style>
 </head>
 <body>
+	<audio src="BGM.mp3" autoplay="autoplay"></audio>
 	<div class="txtCont">
 		<h1>《诗经·周南·桃夭》</h1>
 		<p>桃之夭夭，灼灼其华。</p>
